fix: also fix zlecenia container overflow blocking sticky

--- a/public/css/studnie.css
+++ b/public/css/studnie.css
@@ -1439,11 +1439,9 @@
 
 .zlecenia-container {
     width: 100%;
-    height: 100vh;
     display: grid;
     grid-template-columns: 350px 1fr 350px;
     background: var(--bg-primary);
-    overflow: hidden;
 }
 
 .zlecenia-left {
@@ -1454,8 +1452,8 @@
     overflow: hidden;
     position: sticky;
     top: 0;
-    align-self: start;
     z-index: 10;
+    height: 100vh;
 }
 
 .zlecenia-center {
